fix dark mode color

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,13 +11,13 @@
       @apply py-2 px-3 rounded-sm text-[#222226] text-xs;
     }
     .button-dark {
-      @apply py-2 px-3 rounded-sm text-white text-xs;
+      @apply py-2 px-3 rounded-sm text-[#aaa] text-xs;
     }
     .button-active{
       @apply py-2 px-3 bg-[#2187E5]  text-xs border-[1px] border-solid text-white rounded-md;
     }
     .button-active-dark{
-      @apply py-2 px-3 bg-[#2187E5]  text-xs border-[1px] border-solid text-white rounded-md;
+      @apply py-2 px-3 bg-[#2187E5]  text-xs  text-white rounded-md;
     }
     .button-active-border{
       @apply py-2 px-3  border border-solid border-[#2187E5]  text-xs  text-black rounded-md bg-gray-200;
